<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>us.fatehi</groupId>
    <artifactId>schemacrawler-parent</artifactId>
    <version>17.1.6</version>
    <relativePath />
  </parent>
  <artifactId>schemacrawler-ai-mcpserver</artifactId>
  <version>17.1.6-1</version>
  <packaging>jar</packaging>

  <name>SchemaCrawler AI - MCP Server</name>
  <description>MCP server using Spring Boot AI</description>

  <properties>
    <java.version>21</java.version>
    <skip.signing.artifacts>true</skip.signing.artifacts>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- SchemaCrawler library -->
      <dependency>
        <groupId>us.fatehi</groupId>
        <artifactId>schemacrawler-library-bom</artifactId>
        <version>17.1.6</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Other libraries -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.5.8</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-bom</artifactId>
        <version>1.1.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler</artifactId>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-commandline</artifactId>
    </dependency>

    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-ai-core</artifactId>
      <version>${project.version}</version>
    </dependency>

	<!-- Spring AI WebMVC starter, with substitued dependencies -->
    <dependency>
      <groupId>org.springframework.ai</groupId>
      <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Replace excluded dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <!-- Add Spring Boot web starter -->
	<dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-testdb</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-test-utility</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-api</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-tools</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>us.fatehi</groupId>
      <artifactId>schemacrawler-hsqldb</artifactId>
      <scope>test</scope>
    </dependency>

	<!-- Spring Boot test starters -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <repositories>
    <repository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <url>https://repo.spring.io/milestone</url>
    </repository>
    <repository>
      <id>spring-snapshots</id>
      <name>Spring Snapshots</name>
      <url>https://repo.spring.io/snapshot</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>spring-releases</id>
      <name>Spring Releases</name>
      <url>https://repo.spring.io/release</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-dependencies</id>
            <!-- This disables the execution -->
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>